--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -63,6 +63,11 @@ hr {
     border-bottom: 1px solid #fff;
 }
 
+header .navbar-header {
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
 .btn {
     font-weight: 400;
 }
